Fix some pages layout bugs (fixes #75)

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -322,12 +322,13 @@ ul.row-footer {
   }
 }
 
-.detail-content {
+.detail-content, .flatpage-content {
   position:absolute;
   top: 0;
   bottom: 0;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  width: 100%;
 }
 
 #mainmap {
